[VAS-1075] update getOffers API with missing parameters and page info